Resolves: fdo#47636 cache fontconfig font substitutions

But this time cache on *all* properties, not just the name, which doesn't cut
it, given the things fontconfig can do, e.g. fdo#41556

Change-Id: Idfc1dbac67b6912e4985570a0b7c6ccdf47fa4a5